--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ngo-nexus-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Voluntree</title>
+    <meta name="description" content="Volunteer and ngo search platform" />
+    <meta name="author" content="Team voluntree" />
 
-    <meta property="og:title" content="ngo-nexus-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Voluntree" />
+    <meta property="og:description" content="Volunteer and ngo search platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src/assets/Voluntree Logos Icon.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
